# syslens

./: CLAUDE.md  README.md  diag_test.json  pyproject.toml
scripts/: setup_dump.py
syslens/: display.py  display_extended.py  main.py
syslens/collectors/: battery.py  cpu.py  diagnose.py  disk.py  gpu.py  memory.py  network.py  processes.py  reboot.py  software.py  stack_dump.py  system.py
syslens/collectors/extended/: battery.py  cpu.py  disk.py  gpu.py  memory.py  network.py  processes.py  software.py  system.py
syslens/commentary/: __init__.py  engine.py  knowledge_base.py
tests/: test_reboot.py  test_stack_dump.py
